# openclaw-tool-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
fixtures/agents/: main.json  nightly.yaml
fixtures/sessions/: main-session.jsonl  sanitized-openclaw-session.jsonl
src/openclaw_tool_audit/: __init__.py  audit.py  cli.py  models.py  output.py  parsers.py
tests/: test_audit.py  test_cli.py
