[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "openclaw-tool-audit"
version = "0.1.2"
description = "Audit OpenClaw allowed tools against observed tool usage."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Paul Frederiksen" }
]
keywords = ["openclaw", "security", "audit", "cli", "tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/pfrederiksen/openclaw-tool-audit"
Repository = "https://github.com/pfrederiksen/openclaw-tool-audit"
Issues = "https://github.com/pfrederiksen/openclaw-tool-audit/issues"

[project.scripts]
openclaw-tool-audit = "openclaw_tool_audit.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_tool_audit"]
include = ["src/openclaw_tool_audit/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
